I read all 22 files under src/main/java (~15.4k lines) line by line, and verified every dependency-behavior and javadoc-sample claim against the actual abacus-common 7.8.8 sources (unpacked from the local m2 repo).
No functional bugs found

The concurrency-critical logic holds up. Specifically re-derived and
confirmed:

- Off-heap lock order (map bin → entry monitor → allocator) is respected
on every path, including the promotion, disk-spill, and eviction paths.
free()'s early return under the entry monitor correctly skips
double-accounting; install/free counter updates are symmetric.
- Allocator: slot packing fits 14 bits (16384 slots max/segment),
chunkCountOf uses long math, size-0 values route to MIN_BLOCK_SIZE, and
multi-remove() on the ArrayDeque iterator in reclaimEmptySegmentsLocked
is sound.
- SynchronizedProperties.copy() locks the synchronized map's own mutex
and Properties.create genuinely copies → real atomic snapshot.
- PoolStats/CacheStats have identical component order, so
LocalCache.stats()'s 1:1 mapping is right; PoolableAdapter.destroy is a
no-op, so LocalCache.remove discarding the adapter leaks nothing.
- Javadoc samples compile and are numerically correct — I hand-decoded
all four Base64 examples in DistributedCache.generateKey (dXNlcjoxMjM=,
55So5oi3OjEyMw==, bXkga2V5IHdpdGggc3BhY2VzIQ==, MTIzNDU=), checked every
hit-rate/utilization/TTL figure, and confirmed ContinuableFuture has
both thenRunAsync(Runnable) and thenRunAsync(Consumer) overloads so the
async examples type-check.

Changes applied (6)

┌────────────────────────────────┬─────────────────────────────────────────────────────────────────────────────┐
│              File              │
Change                                    │
├────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────┤
│                                │ Collapsed a dead if/else in the
RedisCluster branch — both arms were        │
│ CacheFactory.java:615          │